--- a/spring_step_official.html
+++ b/spring_step_official.html
@@ -84,6 +84,14 @@
     <button id="sts">Shop the Saving</button>
 </div>
 </div>
+<div id="about">
+<div id="au">ABOUT US</div>
+<div id="l1">For three decades, our commitment to comfort, style, and meticulous craftsmanship has shaped every shoe we create. Rooted in a family legacy, we</div>
+<div id="l2">continue to deliver the finest European comfort and artistry in each pair, carrying forward a tradition of excellence.</div>
+<button id="rm">Read More</button>
+</div>
+<div id="wb">Our Women's Brands</div>
+
 <script src="ssf.js"></script>
 </body>
 </html>
