--- a/spring_step_official.html
+++ b/spring_step_official.html
@@ -91,7 +91,69 @@
 <button id="rm">Read More</button>
 </div>
 <div id="wb">Our Women's Brands</div>
-
+<div id="ip1">
+<div><img src="lartiste_home.jpg" alt=""height:400px; width="400px"></div>
+<div><img src="GALIL-P-06_9c09a18d-a7b7-4570-8491-25a0530860f4.jpg" alt="" height:400px; width="400px"></div>
+<div><img src="patrizia_home.jpg" alt="" height:400px; width="400px"></div>
+</div>
+<div id="ip1a">
+<div id="p11">Step into Color, Step into Art</div>
+<div id="p12">Walk in Style, Live in Comfort</div>
+<div id="p13">Style Without Compromise</div>
+</div>
+<div id="ip1b">
+    <div id="p21">Immerse yourself in the vibrant artistry of hand-painted</div>
+    <div id="p22">Embrace a blend of elegance and comfort in every step with</div>
+    <div id="p23">Discover the perfect blend of fashion and comfort with Patrizia</div>
+</div>
+<div id="ip1c">
+    <div id="p31">leathers with L'Artiste—where each shoe becomes a canvas,</div>
+    <div id="p32">Embrace a blend of elegance and comfort in every step with</div>
+    <div id="p33">Discover the perfect blend of fashion and comfort with Patrizia</div>
+</div>
+<div id="ip1d">
+    <div id="p41">and every step is a journey celebrating unparalleled art,</div>
+    <div id="p42">wearability, creating shoes that support your lifestyle with</div>
+    <div id="p43">combining chic design with everyday ease for a style that</div>
+</div>
+<div id="ip1e">
+    <div id="p51">creativity, and masterful craftsmanship.</div>
+    <div id="p52">effortless style and ease.</div>
+    <div id="p53">seamlessly fits your life.</div>
+</div>
+    <button id="sl">SHOP L'ARTISTE</button>
+    <button id="sssw">SHOP SPRING STEP WOMEN</button>
+    <button id="sp">SHOP PATRIZIA </button>
+<div id="ip2a">
+    <div><img src="azura_home.jpg" alt="" height="400px" width="400px"></div>
+    <div><img src="flexus_home.jpg" alt="" height="400px" width="400px"></div>
+    <div><img src="pro_home.jpg" alt=""  height="400px" width="400px"></div>
+</div>
+<div id="ip2b">
+<div id="ip2b1">Luxury in Every Step</div>
+<div id="ip2b2">Move Freely, Live Comfortably</div>
+<div id="ip2b3">Move Freely, Live Comfortably</div>
+</div>
+<div id="ip2c">
+    <div id="ip2c1">Step into the elegance of European craftsmanship with Azura</div>
+    <div id="ip2c2">Experience the ultimate in free movement and support with</div>
+    <div id="ip2c3">Step into all-day support and durability with Spring Step</div>
+    </div>
+</div>
+<div id="ip2d">
+    <div id="ip2d1">by Spring Step—where modern design meets unparalleled</div>
+    <div id="ip2d2">Flexus—anatomically shaped footbeds and flexible outsoles</div>
+    <div id="ip2d3">Professional for both men and women—where advanced</div>
+    </div>
+    <div id="ip2e">
+        <div id="ip2e1">comfort, creating styles that elevate every moment.</div>
+        <div id="ip2e2">deliver shock-absorbing comfort like a supportive sock.</div>
+        <div id="ip2e3">comfort technology meets sleek, reliable design.</div>
+        </div>
+        <button id="sa">SHOP AZUREA</button>
+        <button id="sf">SHOP FLEXUS</button>
+        <button id="sssp">SHOP SPRING STEP PROFFESION</button>
+</div>
 <script src="ssf.js"></script>
 </body>
 </html>
